--- a/app/src/main/res/drawable/background.xml
+++ b/app/src/main/res/drawable/background.xml
@@ -4,5 +4,5 @@
         android:angle="45"
         android:startColor="#093462"
         android:centerColor="#236CB1"
-        android:endColor="#A46B88"/>
+        android:endColor="#C8B6BF"/>
 </shape>
