--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="40dp"
         android:foreground="@drawable/ic_launcher_foreground"
-        android:background="#618CB6" />
+        android:background="@drawable/background2" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,7 +34,7 @@
         <LinearLayout
             android:layout_marginTop="80dp"
             android:layout_marginHorizontal="50dp"
-            android:background="#C7D2E4"
+            android:background="@drawable/background2"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -42,10 +42,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="#A8C2E2"
                 android:textSize="20sp"
                 android:paddingRight="20dp"
-                android:text="Username" />
+                android:text="Username"
+                android:textStyle="bold"/>
 
             <EditText
                 android:id="@+id/uname"
@@ -53,12 +53,13 @@
                 android:layout_width="194dp"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#050D16"
-                android:hint="Enter the username" />
+                android:hint="Enter the username"
+                android:textColorHint="000000"/>
         </LinearLayout>
         <LinearLayout
             android:layout_marginTop="20dp"
             android:layout_marginHorizontal="50dp"
-            android:background="#C7D2E4"
+            android:background="@drawable/background2"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -66,10 +67,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="#A8C2E2"
                 android:textSize="20dp"
                 android:paddingRight="20dp"
-                android:text="Password" />
+                android:text="Password"
+                android:textStyle="bold"/>
 
             <EditText
                 android:id="@+id/password"
@@ -77,7 +78,8 @@
                 android:layout_width="194dp"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#050D16"
-                android:hint="Enter the Password" />
+                android:hint="Enter the Password"
+                android:textColorHint="#000000"/>
         </LinearLayout>
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/logbt"
